re-commit already committed commits :/

--- a/index.html
+++ b/index.html
@@ -26,11 +26,31 @@
             <button type="button">Sign up</button>
         </div>
         <div class="headimg">
-            <img src="icon.png" alt="i just put in a random image">
+            <img class="photo" src="icon.png" alt="i just put in a random image">
         </div>
-        
-
        </div>
+    </div>
+
+    <div class="info">
+        <div class="infohead">Some random information.</div>
+        <div class="infoimg">
+            <div class="png imgone">
+                <div class="text"><img src="photo.png" alt="a picture :]"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="png imgtwo">
+                <div class="text"><img src="photo.png" alt="a picture :]"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="png imgthree">
+                <div class="text"><img src="photo.png" alt="a picture :]"></div>
+                this is some subtext under an illustration or image
+            </div>
+            <div class="png imgfour">
+                <div class="text"><img class="photo" src="photo.png" alt="a picture :]"></div>
+                this is some subtext under an illustration or image
+            </div>
+        </div>
 
 
     </div>
