--- a/index.html
+++ b/index.html
@@ -51,8 +51,18 @@
                 this is some subtext under an illustration or image
             </div>
         </div>
+    </div>
 
+    <div class="con">
+        <div class="conntainer">
+        <div class="quote">This is an inspiring quote, or a testimonial from a<br/> customer. Maybe it's 
+            just filling up space, or maybe<br/> people will actually read it.
+            Who knows? All I know<br/> is that it looks nice.
+        </div>
+        <div class="thor">-Thor God of Thunder</div>
+       </div>
 
     </div>
+
 </body>
 </html>
